add texture loader and minor fixes

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Preact PWA",
-  "short_name": "Preact PWA",
+  "name": "Three.js Practices",
+  "short_name": "Three.js Practices",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
