--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "webpack-glsl-loader": "^1.0.1"
   },
   "dependencies": {
+    "dat.gui": "^0.6.1",
+    "eases": "^1.0.8",
     "preact": "^8.2.1",
     "preact-compat": "^3.17.0",
     "preact-router": "^2.5.5",
